--- a/package.json
+++ b/package.json
@@ -2,20 +2,39 @@
   "name": "arkadium",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "node server.js",
+    "build": "webpack -d",
+    "build:dist": "webpack -d --config ./webpack.production.config.js --progress --profile --colors",
+    "heroku-postbuild": "npm run build"
+  },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "babel-runtime": "^6.23.0",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-helmet": "^5.0.3",
+    "react-redux": "^5.0.4",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.14.6"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.0",
+    "html-webpack-plugin": "^2.28.0",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.4.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
