--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.0",
     "html-webpack-plugin": "^2.28.0",
+    "postcss-cssnext": "^2.10.0",
+    "postcss-loader": "^1.3.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.1",
