--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.18.1",
     "react": "^15.5.4",
+    "react-custom-scrollbars": "^4.1.1",
     "react-dom": "^15.5.4",
     "react-helmet": "^5.0.3",
     "react-redux": "^5.0.4",
